--- a/experimental-depthaware/config.yaml
+++ b/experimental-depthaware/config.yaml
@@ -1,16 +1,22 @@
 # config.yaml
 
-# YOLOv8 Segmentation Models
+# GPU Configuration
+gpu:
+  enabled: 1  # Set to 1 to use GPU, 0 to use CPU
+
+# YOLOv8 Models
 yolo:
   model_path: 'yolov8n-seg.pt'
   model_confidence: 0.4
   segmentation_confidence: 0.25
 
-# DepthAnythingV2 Model
+# Depth Estimation Model
 depth_model:
-  # name: 'depth-anything/Depth-Anything-V2-Small-hf'
   name: 'Intel/dpt-swinv2-tiny-256'
-  safe_distance_threshold: 150
+  # NEW: This is now a threshold on our calculated 'distance_metric'.
+  # Smaller value = closer. This represents how close an object can be before
+  # the robot must react. Start with a value like 20 and adjust.
+  safe_distance_threshold: 20.0
 
 # Firebase Configuration
 firebase:
@@ -30,7 +36,7 @@ commands:
   left: 2
   right: 3
 
-# Frame division for decision making (thirds)
+# Frame division for decision making
 frame_division:
   left_end: 0.333
   right_start: 0.666
@@ -40,3 +46,12 @@ video_source: 0
 
 # Command send interval in seconds
 command_interval: 1.0
+
+# Top-Down Map Configuration
+map_view:
+  enabled: 1
+  camera_fov: 65.0
+  # NEW: This now scales our new 'distance_metric'.
+  # You may need to adjust this again. If objects are too clustered, increase it.
+  # If they are too spread out, decrease it. Start with 3.0.
+  scale: 3.0
